# glTF-MaterialX-Converter

./: .gitignore  README.html  README.md  pyproject.toml
.github/workflows/: main.yml
documents/: Doxyfile  README_api.md  footer.html  header.html  mermaid_header.html  mermaid_header.js  notebook.dox  notebook.html  notebook.ipynb
documents/html/: ____init_____8py.html  ____init_____8py_source.html  ____main_____8py.html  ____main_____8py.js  ____main_____8py_source.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e__api_8md.html  _r_e_a_d_m_e__template_8md.html  annotated.html  annotated_dup.js  classes.html  classgltf__materialx__converter_1_1converter_1_1gl_t_f_material_x_converter-members.html  classgltf__materialx__converter_1_1converter_1_1gl_t_f_material_x_converter.html  classgltf__materialx__converter_1_1converter_1_1gl_t_f_material_x_converter.js  classgltf__materialx__converter_1_1utilities_1_1_m_tlx_shading_model_translator-members.html  classgltf__materialx__converter_1_1utilities_1_1_m_tlx_shading_model_translator.html  classgltf__materialx__converter_1_1utilities_1_1_m_tlx_shading_model_translator.js  classgltf__materialx__converter_1_1utilities_1_1_mtlx_document_compare-members.html  classgltf__materialx__converter_1_1utilities_1_1_mtlx_document_compare.html  converter_8py.html  (+104 more)
tests/: README.md  test_core.py
utilities/: README.md  README_template.md  build.py  build.sh  build_docs.py  build_docs.sh  build_install.sh  build_test.py  build_test.sh  md2html.py  mxequivalent.py  replace_string.py  test_render.py
(+151 files in other folders)
